Fixed header overflowing with large logo

--- a/scss/_06-site-header.scss
+++ b/scss/_06-site-header.scss
@@ -74,6 +74,7 @@
     flex-shrink: 0;
     flex-grow: 1;
     text-align: left;
+    max-width: 100%;
   }
 
   .social-links {
